{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 122,
  "lineage": "508750f2-f636-6ac6-3013-681f7b5c59ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hp-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:852598404117:instance/i-012cb88488ac1364b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012cb88488ac1364b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042020c91991035b4",
            "private_dns": "ip-10-0-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0004233dbfc20dd25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05730580d43d8aebd",
            "tags": {
              "Name": "hp-EC2-Instance"
            },
            "tags_all": {
              "Name": "hp-EC2-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075760df77d58f8e8"
            ]
          },
          "dependencies": [
            "aws_subnet.Public-hp-subnet",
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hp-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:internet-gateway/igw-0cd6e49a5d6096563",
            "id": "igw-0cd6e49a5d6096563",
            "owner_id": "852598404117",
            "tags": {
              "Name": "hp-internet-gateway"
            },
            "tags_all": {
              "Name": "hp-internet-gateway"
            },
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd6e49a5d6096563",
            "id": "r-rtb-0ed8ba726dd3cd0371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed8ba726dd3cd037",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hp-internet-gateway",
            "aws_route_table.hp-Public-RouteTable",
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hp-Private-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:route-table/rtb-022f7050721b989fe",
            "id": "rtb-022f7050721b989fe",
            "owner_id": "852598404117",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hp-Private-RouteTable"
            },
            "tags_all": {
              "Name": "hp-Private-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hp-Public-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:route-table/rtb-0ed8ba726dd3cd037",
            "id": "rtb-0ed8ba726dd3cd037",
            "owner_id": "852598404117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd6e49a5d6096563",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hp-Public-RouteTable"
            },
            "tags_all": {
              "Name": "hp-Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098ee5b71e9e1f589",
            "route_table_id": "rtb-022f7050721b989fe",
            "subnet_id": "subnet-0d9ec154570af34ea"
          },
          "dependencies": [
            "aws_route_table.hp-Private-RouteTable",
            "aws_subnet.Private-hp-subnet",
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27c256550ef6858",
            "route_table_id": "rtb-0ed8ba726dd3cd037",
            "subnet_id": "subnet-05730580d43d8aebd"
          },
          "dependencies": [
            "aws_route_table.hp-Public-RouteTable",
            "aws_subnet.Public-hp-subnet",
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:security-group/sg-0a9b2c2782ceb3377",
            "description": "Security_Group_DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9b2c2782ceb3377",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hp_Security_Group_DB20230814172937578100000001",
            "name_prefix": "hp_Security_Group_DB",
            "owner_id": "852598404117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-hp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:subnet/subnet-0d9ec154570af34ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9ec154570af34ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "852598404117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hp-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "hp-vpc-private-subnet"
            },
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-hp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:subnet/subnet-05730580d43d8aebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05730580d43d8aebd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "852598404117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hp-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "hp-vpc-public-subnet"
            },
            "vpc_id": "vpc-012d0b63b07fada4d"
          },
          "dependencies": [
            "aws_vpc.hp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:852598404117:vpc/vpc-012d0b63b07fada4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08999b9ba403afbf8",
            "default_route_table_id": "rtb-0b65e9122851e2432",
            "default_security_group_id": "sg-075760df77d58f8e8",
            "dhcp_options_id": "dopt-08f3dcf83a621e455",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012d0b63b07fada4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b65e9122851e2432",
            "owner_id": "852598404117",
            "tags": {
              "Name": "hp_vpc"
            },
            "tags_all": {
              "Name": "hp_vpc"
            }
          }
        }
      ]
    }
  ]
}